# se-toolkit-lab-7

./: docker-compose.yml  pyproject.toml
.qwen/: instuctions.md
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml
bot/handlers/: __init__.py  health.py  help.py  intent.py  labs.py  scores.py  start.py
bot/services/: __init__.py  llm_client.py  lms_client.py
bot/tools/: __init__.py
